--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "backend/index.js",
   "scripts": {
-  "dev": "powershell -Command \"try { Stop-Process -Id (Get-NetTCPConnection -LocalPort 3000).OwningProcess -Force } catch {} ; nodemon backend/index.js\""
-},
+    "dev": "powershell -Command \"try { Stop-Process -Id (Get-NetTCPConnection -LocalPort 3000).OwningProcess -Force } catch {} ; nodemon backend/index.js\""
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "postgres": "^3.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
